Bug 1312097 - Wrap elements in new console filter bar. r=linclark
MozReview-Commit-ID: G7EaMYk9a0V

UltraBlame original commit: 8f50ba625ad063096c6d0ca5f3628ea58dac7d82

--- a/devtools/client/themes/webconsole.css
+++ b/devtools/client/themes/webconsole.css
@@ -4450,6 +4450,22 @@ flex
 ;
 }
 .
+devtools
+-
+toolbar
+.
+webconsole
+-
+filterbar
+-
+secondary
+{
+height
+:
+initial
+;
+}
+.
 webconsole
 -
 filterbar
